objects/Route_Import_PE__e.object
<CustomObject>
    <description>Platform event for server to client messaging for route imports</description>
    <fields>
        <fullName>Content_Document_Id__c</fullName>
        <description>The SFDC Id of the ContentDocument being worked on</description>
        <label>Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publishing_Process_Name__c</fullName>
        <description>Something so we can filter the messages we listen for on the client.</description>
        <label>Publishing Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Import_Id__c</fullName>
        <description>The SFDC Id of the Route_Import__c record being worked on.</description>
        <label>Route Import Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Ie info,warning,error,success etc.. something that we can use in a toast if desired.</description>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>[&apos;Processing&apos;,&apos;Completed] etc.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ui_Message__c</fullName>
        <description>A message to display to the you. For example within the Route Import Assistant.</description>
        <label>Ui Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Route Import PE</label>
    <pluralLabel>Route Import PE</pluralLabel>
</CustomObject>